create submit for btn about

--- a/css/style.css
+++ b/css/style.css
@@ -56,4 +56,13 @@ button {
   padding: 0 15px;
 }
 
+/*******************************/
+/*! HERO */
+/*******************************/
+
+
+
+/*******************************/
+/*! ABOUT */
+/*******************************/
 
