--- a/css/style.css
+++ b/css/style.css
@@ -56,13 +56,157 @@ button {
   padding: 0 15px;
 }
 
+.nav-bar {
+  position: absolute; /* Розміщує меню поверх зображення */
+  top: 20px; /* Відступ від верхнього краю */
+  left: 0;
+  right: 0;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 30px;
+  z-index: 3; /* Розташовує меню поверх зображення */
+  color: #fff;
+}
+
+.logo-box {
+  font-size: 24px;
+  font-weight: bold;
+}
+
+.nav-list {
+  list-style: none;
+  display: flex;
+  gap: 20px;
+}
+
+.nav-item .nav-link {
+  color: #fff;
+  text-decoration: none;
+}
+
 /*******************************/
 /*! HERO */
 /*******************************/
 
+.hero-section {
+  position: relative;
+  overflow: hidden;
+  height: 100vh;
+  width: 100vw;
+}
 
+.hero-container {
+  position: relative;
+  z-index: 2;
+}
+
+.hero {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end; /* Вирівнює елементи по правому краю */
+  justify-content: center; /* Вирівнює по вертикалі в центрі */
+  width: 40%; /* Встановлює ширину контейнера, налаштуйте за потреби */
+  position: relative; /* Додаємо позицію для контролю над елементами */
+  z-index: 2; /* Зберігає вміст поверх зображення */
+}
+
+.hero {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end; /* Вирівнює елементи по правому краю */
+  justify-content: center; /* Вирівнює по вертикалі в центрі */
+  width: 40%; /* Задає ширину контейнера */
+  position: relative; /* Додаємо позицію для контролю над елементами */
+  z-index: 2; /* Зберігає вміст поверх зображення */
+}
+
+.hero-title {
+  position: relative;
+  font-family: "Poppins", sans-serif;
+  font-size: clamp(80px, 6.4vw, 85px);
+  font-weight: 700;
+  /* line-height: 88px; */
+  letter-spacing: 1.2px;
+  text-shadow: 0px 4px 4px rgba(230, 153, 11, 0.5);
+  color: #fff;
+  margin-bottom: 32px;
+  z-index: 2;
+}
+
+.hero-content {
+  position: relative;
+  max-width: 560px;
+  z-index: 2;
+}
+
+.hero-text {
+  font-family: "Poppins", sans-serif;
+  font-size: clamp(14px, 2vw, 16px);
+  font-weight: 400;
+  color: #ffffffb9;
+  letter-spacing: 0.3px;
+  line-height: 22px;
+}
+
+.icons-box {
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 52px;
+  right: -32px;
+  top: 250px;
+  z-index: 2;
+}
+
+.icon-chevron-right {
+  font-size: 42px;
+  border: 1px solid #fff;
+  border-radius: 50px;
+  padding: 12px;
+  color: #fff;
+}
+
+.icons-right {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 42px;
+  color: #fff;
+}
+.icons-left {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 42px;
+  transform: rotate(180deg);
+  color: #fff;
+}
+
+.btn-about {
+  position: relative;
+  z-index: 2;
+}
+
+.btn-gallery {
+  position: relative;
+  z-index: 2;
+}
+
+.image-in-slide {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  object-fit: cover;
+  object-position: top; /* Забезпечує фокус на верхній частині зображення */
+  transform: scale(1.05); /* Легке збільшення для покриття країв */
+  z-index: 1;
+}
 
 /*******************************/
 /*! ABOUT */
 /*******************************/
-
