create img object

--- a/css/style.css
+++ b/css/style.css
@@ -35,6 +35,7 @@ html {
   font-family: "Poppins", sans-serif;
   font-size: 0.625rem;
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 body {
   font-size: 1rem;
@@ -254,6 +255,84 @@ button {
 /*! ABOUT */
 /*******************************/
 
+.about-section {
+  padding: 90px 0;
+}
+
+.about-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.content-box {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  max-width: 650px;
+}
+
+.about-title {
+  font-family: "Poppins", sans-serif;
+  font-weight: 600;
+  font-size: 60px;
+  color: #333;
+  margin-bottom: 45px;
+}
+
+.about-text {
+  font-family: "Poppins", sans-serif;
+  font-weight: 400;
+  font-size: 20px;
+  color: #333;
+  letter-spacing: 0.8px;
+  line-height: 1.6;
+}
+
+.about-btn {
+  font-family: "Poppins", sans-serif;
+  font-weight: 600;
+  font-size: 20px;
+  color: #333;
+  padding: 14px 55px;
+  border: 2px solid #000;
+  letter-spacing: 0.04em;
+  border-radius: 50px;
+  margin-top: 45px;
+}
+
+/*******************************/
+/*! GALLERY */
+/*******************************/
+
+.gallery-sectio {
+  padding: 90px 0;
+}
+.gallery-container {
+}
+
+.gall-title {
+  font-family: "Poppins", sans-serif;
+  font-weight: 400;
+  font-size: 60px;
+  color: #333;
+  margin-bottom: 45px;
+  text-align: center;
+}
+
+.gallery-wrapper {
+}
+
+img {
+  width: 430px;
+  height: 560px;
+}
+
+/*******************************/
+/*! MODAL */
+/*******************************/
+
 /*? MODAL */
 
 .backdrop {
@@ -265,19 +344,19 @@ button {
   background-color: rgba(46, 47, 66, 0.4);
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
     visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  z-index: 3;
 }
 .is-hidden {
   opacity: 1;
   visibility: hidden;
   pointer-events: none;
-  z-index: 4;
 }
 
 .modal {
   width: 95%;
   height: 95%;
-  max-width: 392px;
-  max-height: 584px;
+  max-width: 650px;
+  max-height: 450px;
 
   position: absolute;
   top: 50%;
@@ -293,33 +372,100 @@ button {
 
 .modal-button {
   display: flex;
+  align-items: center;
+  justify-content: center;
   position: absolute;
+
   top: 24px;
   right: 24px;
   width: 24px;
   height: 24px;
-  padding: 0;
+  padding: 18px;
   border-radius: 50%;
-  align-items: center;
-  justify-content: center;
-  background-color: #e7e9fc;
-  border: 1px solid rgba(0, 0, 0, 0.1);
+
+  background-color: transparent;
+  border: 2px solid rgba(0, 0, 0, 0.1);
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   cursor: pointer;
 }
 
-.close-button {
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+.icon-close {
+  font-size: 20px;
+  font-weight: 600;
 }
 
 .modal-button:hover,
 .modal-button:focus {
-  border: none;
+  border: transparent;
   background-color: #404bbf;
+  color: #ffffff;
 }
 
-.modal-button:hover,
-.modal-button:focus {
-  fill: #ffffff;
+/*******************************/
+/*! FORM */
+/*******************************/
+
+input,
+textarea {
+  display: block;
+
+  width: 100%;
+  margin-bottom: 10px;
+  border-radius: 4px;
+
+  border: 1px solid #ccc;
+  font-family: "Poppins", sans-serif;
+  font-size: 16px;
+  resize: none;
+  transition: border-color 250ms;
+}
+
+input:focus,
+textarea:focus {
+  border-color: rgb(249, 137, 156);
+  outline: none;
+}
+
+textarea {
+  padding: 10px;
+}
+
+input {
+  height: 30px;
+  padding: 10px;
+
+  resize: none;
+}
+
+input[type="submit"] {
+  border: none;
+  background-color: rgb(249, 137, 156);
+  border-radius: 4px;
+
+  font-weight: 500;
+  /* font-size: 16px; */
+  color: var(--text);
+  padding: 22px;
+  line-height: 0;
+  cursor: pointer;
+  margin-top: 20px;
+}
+
+input[type="submit"]:hover {
+  background-color: rgb(249, 137, 156, 0.8);
+  transition: 250ms ease;
+}
+
+.img-contact {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.img-contact img {
+  max-width: 100%;
+  max-height: 100%;
+  border-radius: 22px;
+  box-shadow: 9px 11px 23px -5px rgba(0, 0, 0, 0.75);
 }
