--- a/css/style.css
+++ b/css/style.css
@@ -340,6 +340,62 @@ button {
   cursor: pointer;
 }
 
+/*? MODAL */
+
+/* The Modal (background) */
+.modal-content {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  padding-top: 5%; /* Location of the box */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0, 0, 0); /* Fallback color */
+  background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
+}
+
+.block.show {
+  display: block;
+} 
+
+/* Modal Content */
+.modal-content {
+  background-color: #fefefe;
+  margin: auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: fit-content;
+}
+
+/* The Close Button */
+/* .close {
+  color: #aaaaaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: #000;
+  text-decoration: none;
+  cursor: pointer;
+} */
+
+.img-modal-wrapper {
+  display: flex;
+  justify-content: center;
+}
+
+#modal-img {
+  max-height: 80vh;
+}
+
+
+
 /*******************************/
 /*! MODAL */
 /*******************************/
@@ -357,6 +413,7 @@ button {
     visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
   z-index: 3;
 }
+
 .is-hidden {
   opacity: 1;
   visibility: hidden;
