--- a/css/style.css
+++ b/css/style.css
@@ -270,7 +270,7 @@ button {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  max-width: 650px;
+  max-width: 750px;
 }
 
 .about-title {
@@ -340,7 +340,7 @@ button {
   cursor: pointer;
 }
 
-/*? MODAL */
+/*? MODAL-IMG */
 
 /* The Modal (background) */
 .modal-content {
@@ -357,9 +357,13 @@ button {
   background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
 }
 
+.block {
+  display: none; /* Сховати за замовчуванням */
+}
+
 .block.show {
-  display: block;
-} 
+  display: block; /* Показати модалку */
+}
 
 /* Modal Content */
 .modal-content {
@@ -370,21 +374,6 @@ button {
   width: fit-content;
 }
 
-/* The Close Button */
-/* .close {
-  color: #aaaaaa;
-  float: right;
-  font-size: 28px;
-  font-weight: bold;
-}
-
-.close:hover,
-.close:focus {
-  color: #000;
-  text-decoration: none;
-  cursor: pointer;
-} */
-
 .img-modal-wrapper {
   display: flex;
   justify-content: center;
@@ -393,8 +382,6 @@ button {
 #modal-img {
   max-height: 80vh;
 }
-
-
 
 /*******************************/
 /*! MODAL */
@@ -418,7 +405,7 @@ button {
   opacity: 1;
   visibility: hidden;
   pointer-events: none;
-}
+} 
 
 .modal {
   width: 95%;
@@ -429,13 +416,19 @@ button {
   position: absolute;
   top: 50%;
   left: 50%;
-  padding: 72px 24px 24px;
+  padding: 15px 15px 15px;
   border-radius: 4px;
-  background: #fcfcfc;
+  background: linear-gradient(to right, #0f0c29, #302b63, #24243e);
   transform: translate(-50%, -50%) scale(1);
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12),
-    0px 2px 1px rgba(0, 0, 0, 0 2);
+  /* box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12),
+    0px 2px 1px rgba(0, 0, 0, 0 2); */
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.border {
+  height: 100%;
+  border: 1px solid rgb(255, 187, 0);
+  border-radius: 8px;
 }
 
 .modal-button {
@@ -452,27 +445,105 @@ button {
   border-radius: 50%;
 
   background-color: transparent;
-  border: 2px solid rgba(0, 0, 0, 0.1);
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  border: 2px solid rgba(255, 255, 255, 0.459);
+
   cursor: pointer;
 }
 
 .icon-close {
   font-size: 20px;
   font-weight: 600;
+  color: rgba(255, 255, 255, 0.527);
+}
+
+.icon-close:hover,
+.icon-close:focus {
+  color: #fff;
 }
 
 .modal-button:hover,
 .modal-button:focus {
   border: transparent;
   background-color: #404bbf;
-  color: #ffffff;
+}
+
+.content-modal {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  max-width: 650px;
+  height: 100%;
+  padding: 12px;
+}
+
+.modal-title {
+  font-family: "Poppins", sans-serif;
+  font-weight: 600;
+  font-size: 60px;
+  color: #d39014;
+  margin-bottom: 25px;
+}
+
+.modal-text {
+  font-family: "Poppins", sans-serif;
+  font-weight: 400;
+  font-size: 14px;
+  color: #fff;
+  letter-spacing: 0.8px;
+  line-height: 1.6;
 }
 
 /*******************************/
 /*! FORM */
 /*******************************/
+
+.form-section {
+  padding: 90px 0;
+}
+
+.form-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.contact-title {
+  font-weight: 600;
+  font-size: clamp(28px, 3vw, 30px);
+  text-align: center;
+  margin-bottom: 14px;
+  color: #333;
+}
+
+.contact-subject {
+  font-size: clamp(12px, 3vw, 14px);
+  letter-spacing: 1.2px;
+  line-height: 1.3;
+  padding: 18px 0;
+  color: #333;
+  /* border: 1px solid red; */
+}
+
+.form-content {
+  max-width: 650px;
+  /* margin-bottom: 32px; */
+}
+
+.form {
+  min-width: 650px;
+}
+
+.mesg {
+  display: block;
+  font-weight: 600;
+  font-size: 16px;
+  letter-spacing: 0.04em;
+  color: red;
+  text-align: center;
+  margin-bottom: 10px;
+}
 
 input,
 textarea {
@@ -491,7 +562,7 @@ textarea {
 
 input:focus,
 textarea:focus {
-  border-color: rgb(249, 137, 156);
+  border-color: rgb(48, 43, 99);
   outline: none;
 }
 
@@ -508,12 +579,12 @@ input {
 
 input[type="submit"] {
   border: none;
-  background-color: rgb(249, 137, 156);
+  background-color: #302b63;
   border-radius: 4px;
 
   font-weight: 500;
   /* font-size: 16px; */
-  color: var(--text);
+  color: #fff;
   padding: 22px;
   line-height: 0;
   cursor: pointer;
@@ -521,7 +592,7 @@ input[type="submit"] {
 }
 
 input[type="submit"]:hover {
-  background-color: rgb(249, 137, 156, 0.8);
+  background-color: rgb(48, 43, 99, 0.8);
   transition: 250ms ease;
 }
 
@@ -536,4 +607,13 @@ input[type="submit"]:hover {
   max-height: 100%;
   border-radius: 22px;
   box-shadow: 9px 11px 23px -5px rgba(0, 0, 0, 0.75);
+}
+
+/*******************************/
+/*! FOOTER */
+/*******************************/
+
+.footer {
+  padding: 90px 0;
+  background: linear-gradient(to right, #0f0c29, #302b63, #24243e);
 }
