--- a/css/media-queries.css
+++ b/css/media-queries.css
@@ -259,4 +259,52 @@
     text-transform: uppercase;
     letter-spacing: 1.6px;
   }
+
+  /*! FORM-REGISTRATION */
+
+  .form-box {
+    position: relative;
+    padding: 20px;
+  }
+
+  .form-modal {
+    padding: 42px;
+    gap: 18px;
+    min-width: 380px;
+    min-height: 525px;
+  }
+
+  .btn-regst {
+    top: 4px;
+    right: 4px;
+    width: 12px;
+    height: 12px;
+    padding: 14px;
+    margin: 12px;
+    background-color: transparent;
+  }
+
+  .registretion {
+    color: #000;
+    font-size: 16px;
+  }
+
+  #submit-form {
+    font-weight: 600;
+    background: rgb(68, 71, 231);
+    width: 100%;
+    padding: 24px;
+    margin-top: 36px;
+  }
+
+  .msgg-form {
+    font-family: "Montserrat", system-ui;
+    font-weight: 700;
+    font-size: 18px;
+    text-align: center;
+    color: rgb(206, 40, 40);
+    letter-spacing: 0.8px;
+    line-height: 1.2em;
+    padding: 60px;
+  }
 }
