--- a/css/style.css
+++ b/css/style.css
@@ -730,8 +730,8 @@ input[type="submit"]:hover {
   margin-top: 12px;
 }
 
-.pass-input::placeholder{
-  color: #fff;  
+.pass-input::placeholder {
+  color: #fff;
 }
 
 .pass-input,
@@ -816,4 +816,22 @@ input[type="submit"]:hover {
 .footer {
   padding: 90px 0;
   background: linear-gradient(to right, #0f0c29, #302b63, #24243e);
+}
+
+.footer-content {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.footer-text {
+  font-size: 18px;
+  letter-spacing: 1.2px;
+  line-height: 1.3;
+  padding: 18px 0;
+  color: #fff;
+}
+
+.symbols {
+  font-size: 28px;
 }
